--- a/interactive-card-details-form-main/src/index.css
+++ b/interactive-card-details-form-main/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -7,7 +8,9 @@ html {
 }
 
 body {
-    font-size: 1.6rem;
+    font-size: 1.8rem;
+    font-family: 'Space Grotesk', sans-serif;
+    font-weight: 500;
 }
 
 .cards {
