--- a/interactive-card-details-form-main/src/index.css
+++ b/interactive-card-details-form-main/src/index.css
@@ -14,16 +14,22 @@ body {
     font-weight: 500;
 }
 
-.cards {
+.background {
     background-image: url("images/bg-main-desktop.png");
     background-size: cover;
+}
+
+.cards {
     position: relative;
+    height: 52.7rem;
+    width: 54.1rem;
+    left: 16.4rem;
 }
 
 .card-1 {
-    position: absolute;
-    top: 18.7rem;
-    left: 16.4rem;
+    position: relative;
+    top: 0;
+    left: 0;
     background-image: url("images/bg-card-front.png");
     width: 44.7rem;
     height: 24.5rem;
@@ -32,8 +38,8 @@ body {
 
 .card-2 {
     position: absolute;
-    top: 46.9rem;
-    left: 25.8rem;
+    bottom: 0;
+    right: 0;
     background-image: url("images/bg-card-back.png");
     width: 44.7rem;
     height: 24.5rem;
